--- a/src/styles/homePage.css
+++ b/src/styles/homePage.css
@@ -13,19 +13,28 @@
     width: 100%;
     color: rgb(255, 255, 255);
     background: rgba(0, 0, 0, 0);
-    font-size: 60px;
+    font-size: 100px;
     font-weight: 300;
     text-align: center;
     border: 0;
-    margin: -51px auto 0;
+    margin: -100px auto 0;
     padding-left: 30px;
     padding-right: 30px;
     outline: none;
 }
-#search .btn {
+#search .btn-primary {
     position: absolute;
+    width: 30%;
     top: 50%;
-    left: 50%;
+    left: 37%;
     margin-top: 61px;
     margin-left: -45px;
+}
+
+#search .btn-secondary {
+    position: absolute;
+    top: 50%;
+    left: 65%;
+    margin-top: 61px;
+
 }
