--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -51,13 +51,6 @@ pre {
     padding: 30px 30px 0 30px;
 }
 
-@media only screen and (max-width: 640px) {
-    .component {
-        width: 100%;
-        display: block
-    }
-}
-
 .form-container {
     width: 40%;
     margin: auto;
@@ -69,4 +62,21 @@ pre {
 
 .success {
     color: blue;
+}
+
+@media only screen and (max-width: 640px) {
+    .tree-viewer-container {
+        display: unset;
+    }
+
+    .sidebar{
+        width: 100%;
+        overflow:auto;
+        height:40vh;
+    }
+
+    .content-viewer-container{
+        width: 100%;
+
+    }
 }
