--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,4 +1,3 @@
-
 .App {
     font-family: sans-serif;
 }
@@ -56,7 +55,7 @@ pre {
 }
 
 .hljs {
-    height: 100vh;
+    min-height: 89vh;
     padding: 30px 30px 0 30px;
 }
 
