--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -35,6 +35,10 @@ li {
     padding: 0 50px;
 }
 
+.navbar{
+    border-radius: 0;
+}
+
 .css-79elbk {
     overflow: auto;
 }
@@ -56,6 +60,7 @@ pre {
 
 .hljs {
     min-height: 89vh;
+    font-size: 16px;
     padding: 30px 30px 0 30px;
 }
 
